tests/variant_flow/flow_drop_borrow_clobbers_refinement.err.expected
error: at 9:17: [VF-SwitchArmFalselyUnreachable] In function 'f', block 'entry': switchEnum arm for variant 'Some' claims unreachable but variant is reachable at this point
   |
 9 |                 switchEnum(o) [None: n, Some: dead]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: at 9:17: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'o' is used after move
   |
 9 |                 switchEnum(o) [None: n, Some: dead]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
